메인 페이지 [web] 완료 , 회사소개 > CEO인사말 [web] 완료 , 서브 가이드 퍼블리싱

--- a/assets/css/common.css
+++ b/assets/css/common.css
@@ -1,4 +1,8 @@
+@import "https://fonts.googleapis.com/css?family=Lato:300,400,700";
 .gotham {
   font-family: 'Gotham', sans-serif; }
+
+.lato {
+  font-family: 'Lato', sans-serif; }
 
 /*# sourceMappingURL=common.css.map */
