--- a/assets/css/common.scss
+++ b/assets/css/common.scss
@@ -1,7 +1,14 @@
+@import 'https://fonts.googleapis.com/css?family=Lato:300,400,700';
+
 $sm: 768px;
 $md: 992px;
 $lg: 1200px;
 
+$rc: #d90c1c;
+
 .gotham {
     font-family: 'Gotham', sans-serif;
+}
+.lato {
+    font-family: 'Lato', sans-serif;
 }
